--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -35,6 +35,7 @@ body {
 header {
     width: 100%;
     height: 64px;
+    
     .headerDesktop-container {
         display: flex;
         align-items: center;
@@ -127,6 +128,7 @@ section{
     }
 }
 .about-section {
+    width: 100%;
     text-align: center;
     background-color: $primary-silver;
     padding-top: 3%;
@@ -172,6 +174,7 @@ section{
    
 }
 .section-container{
+    width: 100%;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -507,6 +510,7 @@ footer {
         background-color: $primary-silver;
         padding-top: 3%;
         padding-bottom: 3%;
+        width: 100%;
         .about-section-container {
             display: flex;
             flex-direction: column;
